fix: Change long url so it doesn't overflow

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -27,3 +27,7 @@
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
+
+.breakable-anywhere {
+  line-break: anywhere;
+}
